[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/target.png" type="Texture" id=1]
[ext_resource path="res://target.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/ding_sound.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Target" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 22

[node name="ProjectileSensor" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileSensor"]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[connection signal="body_entered" from="ProjectileSensor" to="." method="_on_ProjectileSensor_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
